<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OnYard</string>
    <string name="vehicle_list_activity_title">Search Results</string>
    <string name="drawing_color_prompt">Choose a drawing color:</string>
    <string name="override_branch_number_pref">branch_number_pref</string>
    <string name="ip_branch_number_pref">ip_branch_number_pref</string>
    <string name="ip_branch_name_pref">ip_branch_name_pref</string>
    <string name="full_sync_pref">full_sync_pref</string>
    <string name="onyard_shared_prefs_name">OnYard_Prefs</string>
    <string name="title_activity_camera">Camera</string>
    <string name="capture_button">Capture</string>
    <string name="save_title">Save</string>
    <string name="verify_title">Verify</string>
    <string name="auction_date_pref">auction_date_pref</string>
    <string name="auction_item_sequence_number_pref">auction_item_sequence_number_pref</string>
    <string name="sale_aisle_pref">sale_aisle_pref</string>
    <string name="odd_even_numbering_pref">odd_even_numbering_pref</string>
    <string name="auction_number_pref">auction_number_pref</string>
    <string name="set_sale_enabled_pref">set_sale_enabled_pref</string>
    <string name="enhancements_enabled_pref">enhancements_enabled_pref</string>
    <string name="delete_oldest_pending_sync_pref">delete_oldest_pending_sync_pref</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
    
    <string name="title_activity_image_review">Image Review</string>
    <string name="thumbnail">thumbnail</string>
    <string name="saving_images_activity_title">Captured images</string>
    <string name="sync_caption">Sync</string>
    <string name="cancel_caption">Cancel</string>
    <string name="camera_flash_pref">camera_flash</string>
    <string name="voice_commands_caption">Voice Commands</string>
    <string name="capture_keyword_caption">Capture Keyword:</string>
    <string name="voice_command_pref">voice_command</string>
    <string name="capture_keyword_pref">capture_keyword</string>
    <string name="search_box_hint">Search stock&#8230;</string>
    <string name="review_delete">Delete</string>
    <string name="current_search_tab_pref">current_search_tab</string>
    <string name="current_details_tab_pref">current_details_tab</string>
	<string name="ymm_text">ymm</string>
	<string name="stock_text">stock</string>
	<string name="provider_text">provider</string>
	<string name="status_text">status</string>
	<string name="location_text">location</string>
	<string name="save_button_text">Save</string>
	<string name="elapsedHrs_text">0 hrs</string>
            
	<string name="sync_idle_message">Up to Date</string>
    <string name="sync_in_progress_message">Syncing&#8230;</string>
    <string name="network_unavailable_message">Network Unavailable</string>
    <string name="sync_disabled_message">Sync Disabled</string>
    <string name="sync_failed_message">Sync Failed - Touch to Retry</string>
    <string name="sync_tap_prompt">Tap to Sync</string>
    <string name="ok">OK</string>
    <string name="coming_soon_announcement">Coming soon&#8230;</string>
    <string name="login_header">IAA Network Login</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_caption">Login</string>
	<string name="action_bar_login_caption">LOGIN</string>      
	<string name="action_bar_logout_caption"> LOG OUT </string>
	<string name="username_required_message">Username is required.</string>   
	<string name="password_required_message">Password is required.</string>
	<string name="login_failed_message">Invalid username or password.\nPlease try again.</string>
	<string name="password_expired_message">Your password has expired. \nPlease login to a Windows PC to update your password.</string>
	<string name="touch_to_start">Touch here to start</string>	
	<string name="sync_button_caption">Sync Now</string>	
	<string name="syncing_caption">Syncing...</string>	
	<string name="spacer">   </string>	
	<string name="reshoot_list_title"><b>Reshoots</b></string>	
	<string name="nav_drawer_open">Open Drawer</string>
    <string name="nav_drawer_close">Close Drawer</string>
	
	<string name="time_since_last_sync">Time since last sync:&#160;</string>	
	<string name="images_pending_sync">&#160;Image records pending sync</string>	
	<string name="images_sync_delay">Check-In images will sync after&#160;</string>	
	<string name="sync_failed_msg">Sync failed.</string>	
	<string name="checkin_list_title"><b>Check-In</b></string>	
	<string name="setsale_list_title"><b>Pending Set Sale</b></string>
	<string name="location_list_title"><b>Pending Move to Sale</b></string>
	<string name="enhancements_list_title"><b>Enhancement Work Pending</b></string>	
	<string name="no_value_entered">no value entered</string>
	<string name="checkin_coming_soon">Check-In is currently available for the following salvage types only:\n\nAutomobile\nBoat\nBus\nEmergency Equipment\nMotor Home\nMotorcycle\nPersonal Watercraft\nSnowmobile\nTrailer\nTravel Trailer\nTruck\nCrane\nFarm Equipment\nForestry Equipment\nHeavy Equipment\nOther</string>
	<string name="checkin_wrong_status">This vehicle has already been checked in.</string>
	<string name="setsale_is_completed">This vehicle has already been set for sale.</string>
	<string name="checkin_search_no_stocks">There were no eligible check-in stocks found that match your search criteria. Please try again.</string>
	<string name="setsale_search_no_stocks">There were no stocks found in the selected auction that match your search criteria. Please try again.</string>
	<string name="checkins_pending_sync">&#160;Check-in records pending sync</string>
	<string name="enhancements_pending_sync">&#160;Enhancement records pending sync</string>
	<string name="locations_pending_sync">&#160;Location records pending sync</string>
	<string name="setsales_pending_sync">&#160;Set Sale records pending sync</string>
	<string name="scan_vin_barcode">Scan VIN Barcode</string>
	<string name="manual_verification">Manual Verification</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="existing_vin">Existing VIN</string>
	<string name="scanned_vin">Scanned VIN</string>
	<string name="new_aisle_label">New Aisle</string>
	<string name="new_stall_label">New Stall</string>
	<string name="override_vin">Override</string>
	<string name="auction_date_label">Auction Date</string>
</resources>
